--- a/styles/style.css
+++ b/styles/style.css
@@ -173,11 +173,41 @@ a:hover {
 }
 
 .img_open{ /* for images that are constantly open */
-
+  animation-name: rotateOpen;
+  animation-duration: 0.8s;
+  animation-direction:normal;  
 }
+
 .img_closed{ /* for images that are closed */
-
+  animation-name: rotateClose;
+  animation-duration: 0.8s;
+  animation-direction: normal; 
 }
+
+@keyframes rotateOpen {
+  0% {
+    transform: rotateY(0);
+  }
+  50% {
+    transform: rotateY(90deg);
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+
+@keyframes rotateClose {
+  0% {
+    transform: rotateY(0);
+  }
+  50% {
+    transform: rotateY(90deg);
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+
 .img_selected{ /* for image that are selected right now */
 
 }
